[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
kudo_controller_lib = {path = "./lib"}
tokio = {version = "1.18.0", features = ["rt-multi-thread", "macros"]}
tonic = "0.7.1"
env_logger = "0.6.0"
confy = "0.4.0"
serde = { version = "1.0.139", features = ["derive"] }
proto = {path = "../proto"}