[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kudo_controller_lib = {path = "./lib"}
tokio = {version = "1.18.0", features = ["rt-multi-thread", "macros"]}
env_logger = "0.6.0"
etcd-client = "0.9"
