[package]
name = "kudo_controller_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.136", features = ["derive"] }
tonic = "0.7.1"
prost = "0.10.1"
log = "0.4.0"

[build-dependencies]
tonic-build = "0.7.1"
